sf-src/force-app/main/default/objects/Sales_Transaction__c/Sales_Transaction__c.object-meta.xml
<CustomObject>
    <label>売上トランザクション</label>
    <nameField>
        <displayFormat>TRX-{00000000}</displayFormat>
        <label>取引番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>