sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R_Account_3568</relationshipName>
    <type>Lookup</type>
</CustomField>