sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ブランド</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>売上トランザクション</relationshipLabel>
    <relationshipName>SalesTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>