sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>チャネル</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EC販売</fullName>
            </value>
            <value>
                <fullName>店舗決済</fullName>
            </value>
            <value>
                <fullName>銀行振込</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>