sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <label>顧客氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>