sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/DiscountCode__c.field-meta.xml
<CustomField>
    <fullName>DiscountCode__c</fullName>
    <label>割引コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>