sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/FulfillmentStatus__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentStatus__c</fullName>
    <label>出荷ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未出荷</fullName>
            </value>
            <value>
                <fullName>出荷済</fullName>
            </value>
            <value>
                <fullName>一部出荷</fullName>
            </value>
            <value>
                <fullName>返品</fullName>
            </value>
            <value>
                <fullName>fulfilled</fullName>
                <isActive>false</isActive>
                <label>fulfilled</label>
            </value>
            <value>
                <fullName>partial</fullName>
                <isActive>false</isActive>
                <label>partial</label>
            </value>
            <value>
                <fullName>restocked</fullName>
                <isActive>false</isActive>
                <label>restocked</label>
            </value>
            <value>
                <fullName>unfulfilled</fullName>
                <isActive>false</isActive>
                <label>unfulfilled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>