sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>入金予定額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>