sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>決済方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>