sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/PaymentReference__c.field-meta.xml
<CustomField>
    <fullName>PaymentReference__c</fullName>
    <label>決済リファレンス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>