sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/RefundedAmount__c.field-meta.xml
<CustomField>
    <fullName>RefundedAmount__c</fullName>
    <label>返金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>