sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/ShippingAmount__c.field-meta.xml
<CustomField>
    <fullName>ShippingAmount__c</fullName>
    <label>送料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>