sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/ShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>ShippingMethod__c</fullName>
    <label>配送方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>