sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>ソースシステム</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Shopify銀行振込</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>デジカ</fullName>
            </value>
            <value>
                <fullName>STORES決済</fullName>
            </value>
            <value>
                <fullName>PayPay</fullName>
            </value>
            <value>
                <fullName>楽天ペイ</fullName>
            </value>
            <value>
                <fullName>auPAY</fullName>
            </value>
            <value>
                <fullName>ハチペイ</fullName>
            </value>
            <value>
                <fullName>BASE</fullName>
            </value>
            <value>
                <fullName>スマート支払い</fullName>
            </value>
            <value>
                <fullName>現金</fullName>
            </value>
            <value>
                <fullName>手入力</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>