sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>支払済</fullName>
            </value>
            <value>
                <fullName>未払い</fullName>
            </value>
            <value>
                <fullName>返金済</fullName>
            </value>
            <value>
                <fullName>一部返金</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>