sf-src/force-app/main/default/objects/Sales_Transaction__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <label>取引日</label>
    <type>Date</type>
</CustomField>